--- a/setup/setup-zabbix-containers.yml
+++ b/setup/setup-zabbix-containers.yml
@@ -55,17 +55,32 @@ services:
     hostname: zabbix-nginx
     volumes:
     - ./conf.d:/etc/nginx/conf.d
+    networks:
+    - zabbix-network
     ports:
     - 80:80
     - 443:443
     depends_on:
     - zabbix-web
+
+  zabbix-agent:
+    image: zabbix/zabbix-agent:latest
+    container_name: zabbix-agent
+    hostname: $(hostname)
+    environment:
+      ZBX_SERVER_HOST="zabbix-server"
+    volumes:
+    - zabbix-agent-volume:/etc/zabbix
     networks:
     - zabbix-network
-
+    ports:
+    - 10050:10050
+    depends_on:
+    - zabbix-server
 
 volumes:
-  zabbix-postgres-data:
+  - zabbix-postgres-data
+  - zabbix-agent-volume
 
 networks:
   zabbix-network:
